Added signup page Updated the app-routing.module.ts to include the signup page Updated the app.component.html to include the signup page Updated the visuals of the login and signup pages

--- a/chuok-frontend/src/app/app.component.html
+++ b/chuok-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-  <ng-container [ngSwitch]="headerType">
+  <ng-container [ngSwitch]="headerType" *ngIf="!hideHeaderFooter">
     <app-header *ngSwitchCase="'default'"></app-header>
     <app-header-main *ngSwitchCase="'main'"></app-header-main>
     <app-header-home *ngSwitchCase="'home'"></app-header-home>
