--- a/chuok-frontend/src/app/pages/main/main.component.html
+++ b/chuok-frontend/src/app/pages/main/main.component.html
@@ -1,7 +1,7 @@
 <div class="main-message">
     <p><span class="gradient-text">chuOK.</span> Take a break</p>
 </div>
-<main class="main-content">
+<main #mainContent class="main-content" [class.show-panels]="showPanels">
     <div class="main-content-panel-1 unfold-panel">
         <p class="panel-title">This is chuOK</p>
         <div class="panel-content">
