Added new field to signup component form Adjusted logo size for header Added new image for user center page Created visual design for user articles and phrases pages

--- a/chuok-frontend/src/app/components/footer/footer.component.html
+++ b/chuok-frontend/src/app/components/footer/footer.component.html
@@ -125,9 +125,9 @@
         </div>
         <div class="footer-know-contact">
             <p>Know about us</p>
-            <a routerLink="/about" routerLinkActive="active">About</a>
+            <a href="/about" routerLinkActive="active">About</a>
             <p>Contact us</p>
-            <a routerLink="/contact" routerLinkActive="active">Contact</a>
+            <a href="/contact" routerLinkActive="active">Contact</a>
         </div>
     </div>
     <div class="footer-copyright">© 2025 Samuel Tineo Herrera. All rights reserved.</div>
