--- a/chuok-frontend/src/app/pages/articles/articles.component.html
+++ b/chuok-frontend/src/app/pages/articles/articles.component.html
@@ -1,1 +1,30 @@
-<p>articles works!</p>
+<nav class="filter">
+    <ul class="filter-list">
+        <li><button>All</button></li>
+        <li><button>Literature</button></li>
+        <li><button>Science</button></li>
+        <li><button>Nature</button></li>
+    </ul>
+</nav>
+<main class="articles-grid">
+    <div class="article-card" *ngFor="let article of articles; let i = index" (click)="openArticle(i)">
+        <h2>{{ article.title }}</h2>
+        <p></p>
+        <p>{{ article.author }}</p>
+        <p>{{ article.date }}</p>
+    </div>
+</main>
+
+<!-- Popup Article Modal -->
+<div *ngIf="selectedArticleIndex !== null" class="article-modal-overlay" (click)="closeArticle()">
+  <div class="article-modal" (click)="$event.stopPropagation()">
+    <button (click)="closeArticle()"></button>
+    <ng-container *ngIf="selectedArticleIndex !== null">
+      <h2>{{ articles[selectedArticleIndex!].title }}</h2>
+      <p>{{ articles[selectedArticleIndex!].content }}</p>
+      <p>{{ articles[selectedArticleIndex!].author }}</p>
+      <p>{{ articles[selectedArticleIndex!].date }}</p>
+    </ng-container>
+    
+  </div>
+</div>
