--- a/chuok-frontend/src/app/pages/signup/signup.component.html
+++ b/chuok-frontend/src/app/pages/signup/signup.component.html
@@ -6,6 +6,10 @@
     
       <form class="form" (ngSubmit)="$event.preventDefault()">
         <h1>SIGN UP</h1>
+          <label>
+            <input required="" placeholder="" type="text" class="input">
+            <span>username</span>
+          </label>
          <label>
             <input required="" placeholder="" type="email" class="input">
               <span>email</span>
